# vaxp_dock

./: BUILD_AND_TEST.md  CMakeLists.txt  DOCK_SETTINGS_CONTEXT_MENU.md  INVESTIGATION_RESULTS.md  QUICK_REFERENCE.md  README.md  SESSION_SUMMARY.md  WAYLAND_FIX.md  WAYLAND_LIMITATION.md  pubspec.yaml
lib/: main.dart
lib/models/: desktop_entry.dart
lib/services/: dock_settings_service.dart
lib/utils/: icon_loader.dart  icon_provider.dart
lib/widgets/app_launcher/: app_grid.dart
lib/widgets/dock/: dock_icon.dart  dock_panel.dart  dock_settings_dialog.dart
lib/windows/: settings_window.dart
linux/: CMakeLists.txt
linux/flutter/: CMakeLists.txt  generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: CMakeLists.txt  my_application.cc
linux/share/applications/: vaxp-dock.desktop
src/: CMakeLists.txt  icon_loader.c  icon_loader.h
